<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:background="@color/black"
    android:layout_height="fill_parent">
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-40dp"
        android:src="@drawable/shape2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textSize="30dp"
        android:gravity="end"
        android:layout_marginRight="10dp"
        android:layout_marginTop="@dimen/margin_10dp"
        android:textStyle="bold"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/margin_10dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@color/black"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_20dp"
            android:src="@mipmap/logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textSize="16dp"
            android:gravity="start"
            android:layout_marginLeft="@dimen/margin_40dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:textStyle="normal"
            android:drawablePadding="8dp"
            android:textColor="@color/white" />


            <EditText
                android:id="@+id/login_emailid"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/loginbutton_selector"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:layout_marginTop="@dimen/margin_5dp"
                android:layout_marginLeft="@dimen/margin_40dp"
                android:layout_marginRight="@dimen/margin_40dp"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="12sp" />



        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textSize="16dp"
            android:gravity="start"
            android:layout_marginLeft="@dimen/margin_40dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:textStyle="normal"
            android:drawablePadding="8dp"
            android:textColor="@color/white" />


            <EditText
                android:id="@+id/login_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/loginbutton_selector"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/passowrd"
                android:layout_marginLeft="@dimen/margin_40dp"
                android:layout_marginRight="@dimen/margin_40dp"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="12sp" />



        <Button
            android:id="@+id/loginBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15dp"
            android:background="@drawable/button_selector"
            android:padding="3dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:layout_marginLeft="@dimen/margin_40dp"
            android:layout_marginRight="@dimen/margin_40dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_gravity="end"
            android:padding="5dp"
            android:text="@string/forgot"
            android:textStyle="bold"
            android:textColor="@color/purple_500"
            android:layout_marginRight="@dimen/margin_40dp"
            android:textSize="16sp" />
    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/login_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:padding="5dp">



    <com.fitjifuser.ui.customfonts.MyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newUser"
        android:textColor="@color/color"
        android:textSize="15sp" />

        <com.fitjifuser.ui.customfonts.MyTextView
            android:id="@+id/createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register"
            android:textColor="@color/purple_200"
            android:textSize="15sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>