<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:background="@color/black"
    android:focusable="true"
    android:layout_height="fill_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-40dp"
        android:src="@drawable/shape2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:textSize="30dp"
        android:gravity="end"
        android:layout_marginRight="10dp"
        android:layout_marginTop="@dimen/margin_10dp"
        android:textStyle="bold"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/margin_40dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_40dp"
            android:background="@color/black"
            android:src="@mipmap/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_40dp"
                android:layout_marginTop="@dimen/margin_20dp"
                android:layout_weight="5"
                android:drawablePadding="8dp"
                android:gravity="start"
                android:text="@string/firstname"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="normal" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20dp"
                android:layout_marginRight="@dimen/margin_40dp"
                android:layout_weight="5"
                android:drawablePadding="8dp"
                android:gravity="start"
                android:text="@string/lastname"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="normal" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">



                <EditText
                    android:id="@+id/firstname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_40dp"
                    android:layout_marginRight="@dimen/margin_40dp"
                    android:background="@drawable/loginbutton_selector"
                    android:drawablePadding="8dp"
                    android:layout_marginTop="7dp"
                    android:gravity="center_vertical"
                    android:hint="@string/firstname"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="12sp"
                    android:layout_weight="1"/>


                <EditText
                    android:id="@+id/lastname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_40dp"
                    android:background="@drawable/loginbutton_selector"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/lastname"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:layout_marginTop="7dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="12sp"
                    android:layout_weight="1"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_40dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:drawablePadding="8dp"
            android:gravity="start"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="normal" />



            <EditText
                android:id="@+id/user_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_40dp"
                android:layout_marginRight="@dimen/margin_40dp"
                android:background="@drawable/loginbutton_selector"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:layout_marginTop="7dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_40dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:drawablePadding="8dp"
            android:gravity="start"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="normal" />



            <EditText
                android:id="@+id/login_mobile"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_40dp"
                android:layout_marginRight="@dimen/margin_40dp"
                android:background="@drawable/loginbutton_selector"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:layout_marginTop="7dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_40dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:drawablePadding="8dp"
            android:gravity="start"
            android:text="@string/mobileNumber"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="normal" />


            <EditText
                android:id="@+id/login_emailid"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_40dp"
                android:layout_marginRight="@dimen/margin_40dp"
                android:background="@drawable/loginbutton_selector"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/mobileNumber"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:layout_marginTop="7dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_40dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:drawablePadding="8dp"
            android:gravity="start"
            android:text="Password"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="normal" />



            <EditText
                android:id="@+id/login_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_40dp"
                android:layout_marginRight="@dimen/margin_40dp"
                android:background="@drawable/loginbutton_selector"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/passowrd"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:layout_marginTop="7dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="12sp" />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_40dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:drawablePadding="8dp"
            android:gravity="start"
            android:text="@string/confirmPassword"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="normal" />



            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_40dp"
                android:layout_marginRight="@dimen/margin_40dp"
                android:background="@drawable/loginbutton_selector"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:layout_marginTop="7dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="12sp" />


        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_40dp"
            android:layout_marginTop="@dimen/margin_15dp"
            android:layout_marginRight="@dimen/margin_40dp"
            android:background="@drawable/button_selector"
            android:padding="3dp"
            android:text="@string/signUp"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/login_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:padding="5dp">


    <com.fitjifuser.ui.customfonts.MyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_user"
        android:textColor="@color/color"
        android:textSize="15sp" />


                <com.fitjifuser.ui.customfonts.MyTextView
                    android:id="@+id/already_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="Login"
                    android:textColor="@color/purple_200"
                    android:textSize="15sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>