<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.FitjifUser.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:popupTheme="@style/Theme.FitjifUser.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:background="@color/black"
                android:gravity="center_horizontal"
                android:orientation="vertical">


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:drawablePadding="8dp"
                    android:gravity="start"
                    android:text="@string/currentpassword"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />



                    <EditText
                        android:id="@+id/login_username"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_40dp"
                        android:layout_marginRight="@dimen/margin_40dp"
                        android:background="@drawable/loginbutton_selector"
                        android:drawablePadding="8dp"
                        android:gravity="center_vertical"
                        android:hint="@string/currentpassword"
                        android:inputType="textEmailAddress"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="12sp" />



                <androidx.appcompat.widget.AppCompatCheckedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:drawablePadding="8dp"
                    android:gravity="start"
                    android:text="@string/newpassword"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />



                    <EditText
                        android:id="@+id/login_emailid"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_40dp"
                        android:layout_marginRight="@dimen/margin_40dp"
                        android:background="@drawable/loginbutton_selector"
                        android:drawablePadding="8dp"
                        android:gravity="center_vertical"
                        android:hint="@string/newpassword"
                        android:inputType="textEmailAddress"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="12sp" />



                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:drawablePadding="8dp"
                    android:gravity="start"
                    android:text="@string/confirmnewpassword"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />



                    <EditText
                        android:id="@+id/login_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_40dp"
                        android:layout_marginRight="@dimen/margin_40dp"
                        android:background="@drawable/loginbutton_selector"
                        android:drawablePadding="8dp"
                        android:gravity="center_vertical"
                        android:hint="@string/confirmnewpassword"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="12sp" />



                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_40dp"
                    android:layout_marginTop="@dimen/margin_40dp"
                    android:layout_marginRight="@dimen/margin_40dp"
                    android:background="@drawable/loginbutton_selector"
                    android:padding="3dp"
                    android:text="@string/changepassword"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>